-Changed "entities_after_playback" setting type from integer to enum.
-Changed settings, command names and command arguments naming convention from lower camel case to snake case.
-Added "for_all_players" optional argument to "/mocap playback stop_all".
-Renamed "from_..." to "skin_from_..." simple modifiers in "playback start" and "scene add_to" commands.
-It's now possible to add player_as_entity modifier using simple modifiers (thanks to Narfu for suggestion).
-Item types and block states are now stored using string IDs (instead of numeric IDs), providing better compatibility between different Minecraft versions and modpacks.
-Scene format is now JSON-based.
-Recording now continues for short period after player death.
-Added suggestions for "/mocap scenes modify" "to_modify" argument.
-Added suggestions for "/mocap playback stop" command.
-Suggestions for recordings/scenes names no longer require mod to be installed on a client.
-For scene name suggestions where dot can be omitted, user input without a dot is now properly parsed by suggestion provider.
-Improvements to recording format.
-Improvements to recording information command output.
-Improvements to error messages.
-General command output improvements.
-Improved output of trying to change setting value with "/mocap settings" command, when value remained unchanged.
-Renamed "settings.mcmocap_conf" to "settings.txt".
-Removed argument value limits that existed for some settings in "/mocap settings" command.
-Output of "/mocap recordings list" and "/mocap scenes list" is now alphabetically sorted.
-Changed some "errors" to "failures" and some "failures" to "errors" - it should be now easier to distinguish user errors (failures) from mod errors.
-Fixed recording being in a glitched state after restarting the integrated server (leaving and rejoining world in a singleplayer mode).
-Fixed issues with loading mocap_files directory when using Flashback (thanks to hablethedev for reporting).