@@ -3,7 +3,8 @@
 	"minVersion": "0.8",
 	"package": "net.mt1006.mocap.mixin",
 	"compatibilityLevel": "JAVA_21",
-	"mixins": [
+	"mixins":
+	[
 		"EntityMixin",
 		"LivingEntityMethodMixin",
 		"ServerLevelMixin",
